Comienzo de sig sección: separacion por smean

--- a/YTApi.ipynb
+++ b/YTApi.ipynb
@@ -430,11 +430,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 192,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def replace_minutes(string):\n",
+    "def remove_minutes(string):\n",
     "    pattern = r'[0-9]?[0-9]:[0-9][0-9]'\n",
     "    replace_with = ''\n",
     "    return re.sub(pattern, replace_with, string)"
@@ -469,12 +469,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 189,
    "metadata": {},
    "outputs": [],
    "source": [
     "def remove_extra_words(string):\n",
-    "    pattern = r'Sigue las actividades del presidente de México:  Sitio web:   YouTube:   Facebook:   Twitter:   Instagram:   Telegram:    Spotify: '\n",
+    "    pattern = r' Sigue las actividades del presidente de México:  Sitio web:   YouTube:   Facebook:   Twitter:   Instagram:   Telegram:    Spotify: '\n",
     "    replace_with = ''\n",
     "    return re.sub(pattern, replace_with, string)"
    ]
@@ -489,16 +489,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df['description'] = df['description'].apply(replace_newlines).apply(replace_minutes).apply(remove_links).apply(remove_extra_words)\n"
+    "df['description'] = df['description'].apply(replace_newlines).apply(remove_minutes).apply(remove_links).apply(remove_extra_words)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [
     {
@@ -507,7 +507,7 @@
        "'Conferencia de prensa matutina, desde Palacio Nacional. Lunes 24 de abril 2023 | Presidente AMLO.   Inicio de transmisión  Comienza la conferencia de prensa del presidente Andrés Manuel López Obrador  Comparativo de marcas y precios de combustibles  Comparativo de marcas y precios de productos de primera necesidad  Reporte de construcción del Tren Maya en tramo Escárcega-Calkiní  Informe del consorcio Carso FCC en el Tramo 2 del Tren Maya  Salvamento arqueológico en el proyecto del Tren Maya  Informe de la Semarnat en el Tramo 2 del Tren Maya  Informe de la Secretaría del Bienestar en el Tramo 2 del Tren Maya  Informe de los Programas para el Bienestar 1: Sesión de preguntas y respuestas  '"
       ]
      },
-     "execution_count": 188,
+     "execution_count": 195,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -518,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [
     {
@@ -649,13 +649,21 @@
        "[1085 rows x 3 columns]"
       ]
      },
-     "execution_count": 178,
+     "execution_count": 196,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Separación por semana"
    ]
   }
  ],
