avance en series de tiempo

--- a/YTApi.ipynb
+++ b/YTApi.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,6 +19,8 @@
     "import re\n",
     "\n",
     "import pandas as pd \n",
+    "import numpy as np\n",
+    "\n",
     "from googleapiclient.errors import HttpError\n",
     "from Google import Create_Service"
    ]
@@ -497,7 +499,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Los datos que llegan de la API están contaminados con datos como minutos de YouTube en formato <code>00:00</code>, links de youtube y palabras específicas como redes sociales y frases que no aportan nada.\n",
+    "Los datos que llegan de la API están contaminados con datos como minutos de YouTube en formato <code>00:00</code>, links de youtube y palabras específicas como nombres redes sociales y frases que no aportan nada.\n",
     "Para mejor ejemplo, tomemos un elemento."
    ]
   },
@@ -618,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -858,7 +860,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['clean_dates'] = pd.to_datetime(df['clean_dates'])"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ya tenemso los datos como fechas tipo <code>datetime</code>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv('mañaneras.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -989,13 +1017,235 @@
        "[1087 rows x 3 columns]"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.drop('Unnamed: 0', axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv('mañaneras.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0       2023-04-26\n",
+       "1       2023-04-25\n",
+       "2       2023-04-24\n",
+       "3       2023-04-21\n",
+       "4       2023-04-20\n",
+       "           ...    \n",
+       "1082    2019-03-08\n",
+       "1083    2019-03-08\n",
+       "1084    2019-03-08\n",
+       "1085    2019-03-08\n",
+       "1086    2019-03-08\n",
+       "Name: clean_dates, Length: 1087, dtype: object"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['clean_dates']"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Convertimos el Data Frame en una serie de tiempo con <code>pd.set_index</code>.\n",
+    "De esta manera las fechas ahora serán los índices de el dataframe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.set_index('clean_dates', inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>title</th>\n",
+       "      <th>description</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>clean_dates</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2023-04-26</th>\n",
+       "      <td>Conferencia de prensa matutina, desde Palacio ...</td>\n",
+       "      <td>Conferencia de prensa matutina, desde Palacio ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-04-25</th>\n",
+       "      <td>Conferencia de prensa matutina, desde Palacio ...</td>\n",
+       "      <td>Conferencia de prensa matutina, desde Palacio ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-04-24</th>\n",
+       "      <td>Conferencia de prensa matutina desde Palacio N...</td>\n",
+       "      <td>Conferencia de prensa matutina, desde Palacio ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-04-21</th>\n",
+       "      <td>Seguridad y bienestar mejoran en Veracruz. Con...</td>\n",
+       "      <td>Conferencia de prensa matutina, desde Palacio ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-04-20</th>\n",
+       "      <td>Recursos de venta de avión serán para construi...</td>\n",
+       "      <td>Conferencia de prensa matutina, desde Palacio ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-03-08</th>\n",
+       "      <td>Conferencia matutina: Avances del Gabinete de ...</td>\n",
+       "      <td>Conferencia de prensa matutina, desde Palacio ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-03-08</th>\n",
+       "      <td>Hoy anunciamos la terna de candidatos a minist...</td>\n",
+       "      <td>Cuarta conferencia de prensa matutina desde el...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-03-08</th>\n",
+       "      <td>Tercera conferencia de prensa matutina desde P...</td>\n",
+       "      <td>Tercera conferencia de prensa matutina desde e...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-03-08</th>\n",
+       "      <td>Diálogo con periodistas desde Palacio Nacional</td>\n",
+       "      <td>Segunda conferencia de prensa matutina del pre...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-03-08</th>\n",
+       "      <td>Primera conferencia de prensa matutina desde P...</td>\n",
+       "      <td>Andrés Manuel López Obrador ofrece su primera ...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1087 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                         title   \n",
+       "clean_dates                                                      \n",
+       "2023-04-26   Conferencia de prensa matutina, desde Palacio ...  \\\n",
+       "2023-04-25   Conferencia de prensa matutina, desde Palacio ...   \n",
+       "2023-04-24   Conferencia de prensa matutina desde Palacio N...   \n",
+       "2023-04-21   Seguridad y bienestar mejoran en Veracruz. Con...   \n",
+       "2023-04-20   Recursos de venta de avión serán para construi...   \n",
+       "...                                                        ...   \n",
+       "2019-03-08   Conferencia matutina: Avances del Gabinete de ...   \n",
+       "2019-03-08   Hoy anunciamos la terna de candidatos a minist...   \n",
+       "2019-03-08   Tercera conferencia de prensa matutina desde P...   \n",
+       "2019-03-08      Diálogo con periodistas desde Palacio Nacional   \n",
+       "2019-03-08   Primera conferencia de prensa matutina desde P...   \n",
+       "\n",
+       "                                                   description  \n",
+       "clean_dates                                                     \n",
+       "2023-04-26   Conferencia de prensa matutina, desde Palacio ...  \n",
+       "2023-04-25   Conferencia de prensa matutina, desde Palacio ...  \n",
+       "2023-04-24   Conferencia de prensa matutina, desde Palacio ...  \n",
+       "2023-04-21   Conferencia de prensa matutina, desde Palacio ...  \n",
+       "2023-04-20   Conferencia de prensa matutina, desde Palacio ...  \n",
+       "...                                                        ...  \n",
+       "2019-03-08   Conferencia de prensa matutina, desde Palacio ...  \n",
+       "2019-03-08   Cuarta conferencia de prensa matutina desde el...  \n",
+       "2019-03-08   Tercera conferencia de prensa matutina desde e...  \n",
+       "2019-03-08   Segunda conferencia de prensa matutina del pre...  \n",
+       "2019-03-08   Andrés Manuel López Obrador ofrece su primera ...  \n",
+       "\n",
+       "[1087 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "weekly_ts = df.resample('W').sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "weekly_ts['description'].to_csv('mañaneras.csv')"
    ]
   }
  ],
