--- a/YTApi.ipynb
+++ b/YTApi.ipynb
@@ -426,7 +426,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Hay que crear un dataframe con la información necesaria para hacer el entrenamiento. Estos datos son: EL título, la descrición y la fecha de publicación"
+    "Hay que crear un dataframe con la información necesaria para hacer el entrenamiento. Estos datos son: título, descripción y la fecha de publicación"
    ]
   },
   {
@@ -572,6 +572,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -595,7 +596,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<code>remove_extra_words(string)</code> es una función que elimina los patrones de palabras especícas, pues estas sólo pueden afectar el entrenamiento"
+    "<code>remove_extra_words(string)</code> es una función que elimina los patrones de palabras específicas, pues estas sólo pueden afectar el entrenamiento"
    ]
   },
   {
@@ -872,7 +873,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ya tenemso los datos como fechas tipo <code>datetime</code>"
+    "Ya tenemos los datos como fechas tipo <code>datetime</code>"
    ]
   },
   {
