Libreta de la API más bonita

--- a/YTApi.ipynb
+++ b/YTApi.ipynb
@@ -5,7 +5,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Importaciones"
+    "# Obtención de datos"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Para obtener los datos vamos a usar las descripciones en cada video de las mañaneras. Pues nos provee de un resumen del video del día. De esta manera ya no tenemos que lidiar con conversaciones del presidente cuando usamos las transcripciones."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Importaciones"
    ]
   },
   {
@@ -30,14 +46,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Obtención de datos"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Llamamiento a la API de YouTube"
    ]
   },
@@ -46,78 +54,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Para obtener los datos vamos a usar las descripciones en cada video de las mañaneras. Pues nos provee de un resumen del video del día. De esta manera ya no tenemos que lidiar con conversaciones del presidente cuando usamos las transcripciones."
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Función que utiliza expresiones regulares para obtener los segundos totales de una duración dada."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def convert_duration(duration):\n",
-    "    try:\n",
-    "        h = int(re.search('\\d+H', duration)[0][:-1]) * 60**2  if re.search('\\d+H', duration) else 0 # hour\n",
-    "        m = int(re.search('\\d+M', duration)[0][:-1]) * 60  if re.search('\\d+M', duration) else 0 # minute\n",
-    "        s = int(re.search('\\d+S', duration)[0][:-1])  if re.search('\\d+S', duration) else 0 # second\n",
-    "        return h + m + s\n",
-    "    except Exception as e:\n",
-    "        print(e)\n",
-    "        return 0 "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def retrieve_playlists(service, channelId):\n",
-    "    playlists =[]\n",
-    "    try:\n",
-    "        response = service.playlists().list(\n",
-    "            part = 'contentDetails, snippet, status',\n",
-    "            channelId = channelId,\n",
-    "            maxResults = 50\n",
-    "        ).execute()\n",
-    "\n",
-    "        playlists.extend(response.get('items'))\n",
-    "        nextPageToken = response.get('nextPageToken')\n",
-    "\n",
-    "        while nextPageToken:\n",
-    "            response = service.playlists().list(\n",
-    "                part = 'contentDetails, snippet, status',\n",
-    "                channelId = channelId,\n",
-    "                maxResults = 50,\n",
-    "                pageToken = nextPageToken\n",
-    "            ).execute()\n",
-    "\n",
-    "            playlists.extend(response.get('items'))\n",
-    "            nextPageToken = response.get('nextPageToken')\n",
-    "\n",
-    "        return playlists\n",
-    "\n",
-    "    except HttpError as e:\n",
-    "        errMsg = json.loads(e.content)\n",
-    "        print(\"HTTP Error: \")\n",
-    "        print(errMsg['error']['message'])\n",
-    "        return []"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Función que hace la petición a la API de youtube"
+    "<code>retrieve_playlists_items</code> Función que hace la petición a la API de youtube. Se le da un objeto <code>service</code> que es la información sobre el tipo de API y la autenticación. También recibe <code>playlistId</code> que es el ID de la playlist que queremos."
    ]
   },
   {
@@ -163,7 +100,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Creando constantes para llamar a la API"
+    "Creando constantes para llamar a la API. Toda esta es información sobre el tipo de API y los archivos necesarios para hacer la conexión con Google Cloud"
    ]
   },
   {
@@ -298,7 +235,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Hacemos una llamada a a función de <code>retrieve_playlists_items</code> para obtener todos los videos una playlist especifica "
+    "Hacemos una llamada a a función de <code>retrieve_playlists_items</code> para obtener todos los videos una playlist especifica. En este caso, los videos de la mañaneras"
    ]
   },
   {
@@ -374,7 +311,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Podemos obtener cada elemento de la variable utilizando las posiciones."
+    "Los datos están guardados en un json. Podemos obtener cada elemento de la variable utilizando las posiciones."
    ]
   },
   {
@@ -426,7 +363,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Hay que crear un dataframe con la información necesaria para hacer el entrenamiento. Estos datos son: título, descripción y la fecha de publicación"
+    "Extraeremos sólo la información necesaria para hacer el entrenamiento. Estos datos son: título, descripción y la fecha de publicación"
    ]
   },
   {
@@ -499,7 +436,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Los datos que llegan de la API están contaminados con datos como minutos de YouTube en formato <code>00:00</code>, links de youtube y palabras específicas como nombres redes sociales y frases que no aportan nada.\n",
+    "Los datos que llegan de la API están contaminados con información como minutos de YouTube en formato <code>00:00</code>, links, saltos de línea <code>\\n</code> y palabras específicas como nombres redes sociales o frases que no aportan nada.\n",
     "Para mejor ejemplo, tomemos un elemento."
    ]
   },
@@ -576,7 +513,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<code>replace_minutes(string)</code> es una función que elimina los patrones de formato de minuto (<code>00:00</code>)"
+    "<code>remove_links(string)</code> es una función que elimina los patrones de los links de internet"
    ]
   },
   {
@@ -803,7 +740,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Se recorre el data frame"
+    "Ahora necesitamos separar por semana, es decir, juntar todas las descripciones de una semana. De esta manera cada renglón del dataframe reprensentará una semana en específico.\n",
+    "Lo primero que debemos hacer es limpiar el apartado de la fecha y convertirlo a datetime."
    ]
   },
   {
@@ -835,6 +773,14 @@
    ],
    "source": [
     "df['published_at']"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Lo que se haces es: tomar los primeros 10 digitos de cada elemento de la columna y convertirlo al tipo datetime con la función <code>datetime.strptime</code>. Son los primeros 10 digitos porque son los que representan la fecha de ese día, no nos importan las horas, minutos o segundos así que lo descartamos"
    ]
   },
   {
@@ -874,15 +820,6 @@
    "metadata": {},
    "source": [
     "Ya tenemos los datos como fechas tipo <code>datetime</code>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 66,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = pd.read_csv('mañaneras.csv')"
    ]
   },
   {
@@ -1029,24 +966,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = df.drop('Unnamed: 0', axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.to_csv('mañaneras.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 43,
    "metadata": {},
    "outputs": [
@@ -1081,7 +1000,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Convertimos el Data Frame en una serie de tiempo con <code>pd.set_index</code>.\n",
+    "La mejor manera de manipular datos con fechas es creando una serie de tiempo, para estos se utiliza la libería <code>datetime</code>. Convertimos el Data Frame en una serie de tiempo con <code>pd.set_index</code>.\n",
     "De esta manera las fechas ahora serán los índices de el dataframe"
    ]
   },
@@ -1232,12 +1151,36 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ahora le decimos que separe, con respecto a las fechas, semanalmente. De esta manera va a concatenar los contenidos de las descripciones y los títulos."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Así es como se termina la obtención de datos, ya tenemos nuesto dataframe listo para mandar al preprocesamiento. Como se observó, a los datos se les hizo una primera limpieza, la razón de esto fue para que en el preprocesamiento se hicieran los pasos fundamentales y no pasos extras, como fue este caso de quitar ciertos patrones que estorbaban."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
     "weekly_ts = df.resample('W').sum()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ahora se guarda el dataframe en un .txt para que el preprocesamiento pueda llamarlo y utlizarlo"
    ]
   },
   {
