Se muestra el dataset de los datos semanales

--- a/YTApi.ipynb
+++ b/YTApi.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1159,20 +1159,137 @@
    ]
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Así es como se termina la obtención de datos, ya tenemos nuesto dataframe listo para mandar al preprocesamiento. Como se observó, a los datos se les hizo una primera limpieza, la razón de esto fue para que en el preprocesamiento se hicieran los pasos fundamentales y no pasos extras, como fue este caso de quitar ciertos patrones que estorbaban."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
     "weekly_ts = df.resample('W').sum()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Se muestra el dataframe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>clean_dates</th>\n",
+       "      <th>description</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2019-03-10</td>\n",
+       "      <td>Conferencia de prensa en vivo desde Palacio Na...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2019-03-17</td>\n",
+       "      <td>Conferencia de prensa en vivo desde Palacio Na...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2019-03-24</td>\n",
+       "      <td>Conferencia de prensa en vivo desde Palacio Na...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2019-03-31</td>\n",
+       "      <td>Conferencia de prensa en vivo desde Palacio Na...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2019-04-07</td>\n",
+       "      <td>Conferencia de prensa matutina, desde Palacio ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>212</th>\n",
+       "      <td>2023-04-02</td>\n",
+       "      <td>Conferencia de prensa matutina, desde Palacio ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>213</th>\n",
+       "      <td>2023-04-09</td>\n",
+       "      <td>Conferencia de prensa matutina, desde Palacio ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>214</th>\n",
+       "      <td>2023-04-16</td>\n",
+       "      <td>Conferencia de prensa matutina, desde Palacio ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>215</th>\n",
+       "      <td>2023-04-23</td>\n",
+       "      <td>Conferencia de prensa matutina, desde Palacio ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>216</th>\n",
+       "      <td>2023-04-30</td>\n",
+       "      <td>Conferencia de prensa matutina, desde Palacio ...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>217 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    clean_dates                                        description\n",
+       "0    2019-03-10  Conferencia de prensa en vivo desde Palacio Na...\n",
+       "1    2019-03-17  Conferencia de prensa en vivo desde Palacio Na...\n",
+       "2    2019-03-24  Conferencia de prensa en vivo desde Palacio Na...\n",
+       "3    2019-03-31  Conferencia de prensa en vivo desde Palacio Na...\n",
+       "4    2019-04-07  Conferencia de prensa matutina, desde Palacio ...\n",
+       "..          ...                                                ...\n",
+       "212  2023-04-02  Conferencia de prensa matutina, desde Palacio ...\n",
+       "213  2023-04-09  Conferencia de prensa matutina, desde Palacio ...\n",
+       "214  2023-04-16  Conferencia de prensa matutina, desde Palacio ...\n",
+       "215  2023-04-23  Conferencia de prensa matutina, desde Palacio ...\n",
+       "216  2023-04-30  Conferencia de prensa matutina, desde Palacio ...\n",
+       "\n",
+       "[217 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "weekly_ts"
    ]
   },
   {
@@ -1190,6 +1307,14 @@
    "outputs": [],
    "source": [
     "weekly_ts['description'].to_csv('mañaneras.csv')"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Así es como se termina la obtención de datos, ya tenemos nuesto dataframe listo para mandar al preprocesamiento. Como se observó, a los datos se les hizo una primera limpieza, la razón de esto fue para que en el preprocesamiento se hicieran los pasos fundamentales y no pasos extras, como fue este caso de quitar ciertos patrones que estorbaban."
    ]
   }
  ],
