Descripciones de funciones

--- a/YTApi.ipynb
+++ b/YTApi.ipynb
@@ -465,7 +465,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Declararemos una serie de funciones que utilizarán regex para limpiar esta basura."
+    "Declararemos una función <code>replace_patterns</code>que recibirá una row y una serie de patrones que contendrán el regex a buscar y con lo que se va a reeemplazar"
    ]
   },
   {
@@ -483,6 +483,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "La función <code>remove_beginning</code> se creó principamente porque se regex estaba dando problemas si no se colocaba en una función, por su complejidad probablemente."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 507,
    "metadata": {},
@@ -492,6 +500,13 @@
     "    pattern = r'Conferencia de prensa (matutina|en vivo),?( desde (\\b\\w+\\b,?\\s)?(\\b\\w+\\b\\s)?\\b\\w+\\b)\\. \\b(Lunes|Martes|Miércoles|Jueves|Viernes|Sábado|Domingo)\\b [0-3]?[0-9] de \\b(enero|febrero|marzo|abril|mayo|junio|julio|agosto|septiembre|octubre|noviembre|diciembre)\\b 20[0-9][0-9]\\.?'\n",
     "    replace_with = ''\n",
     "    return re.sub(pattern, replace_with, string)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Aquí está los patrones que se buscarán y con lo que se va a reemplazar"
    ]
   },
   {
